# Escape-From-Finger-chaser

./: .gitignore  CMakeLists.txt  README.md
src/cpp/: main.cpp
src/python/: hand_tracking.py
